<resources>
    <string name="app_name">Nuevo Amanecer</string>

    <!-- Main -->
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="registrate">Regístrate</string>

    <!-- Login -->
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>

    <!-- Registro -->
    <string name="registro">Registro</string>

    <!-- Datos De Alumno -->
    <string name="datos_de_alumno">Datos de Alumno</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellido(s)</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="nivel">Nivel</string>

    <!-- Datos Registrados -->
    <string name="nombre_registro">Nombre:</string>
    <string name="apellidos_registro">Apellido(s):</string>
    <string name="fecha_registro">Fecha de Nacimiento:</string>
    <string name="nivel_registro">Nivel:</string>
    <string name="correo_registro">Correo:</string>
    <string name="dato">dato</string>

    <!-- Alumno -->
    <string name="hola">Hola</string>
    <string name="usuario">Usuario</string>
    <string name="selecciona_juego">SELECCIONA EL JUEGO...</string>
    <string name="tablero">Tablero</string>

    <!-- Juegos -->
    <string name="burbujas">Burbujas</string>
    <string name="animales">Animales</string>
    <string name="juego_1">Juego 1</string>
    <string name="juego_2">Juego 2</string>
    <string name="juego_3">Juego 3</string>
    <string name="juego_4">Juego 4</string>
    <string name="juego_5">Juego 5</string>
    <string name="juego_6">Juego 6</string>

    <!-- Terapeuta -->
    <string name="terapeuta">Terapeuta</string>
    <string name="buscar_alumno">BUSCAR ALUMNO...</string>
    <string name="nombre_alumno">NOMBRE DEL ALUMNO</string>
    <string name="editar">EDITAR</string>

    <!-- Imágenes -->
    <string name="imagenes">IMÁGENES</string>
    <string name="nombre_imagen">NOMBRE DE LA IMAGEN</string>
    <string name="subir_imagen">Subir Imagen</string>

</resources>