<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlumnoFragment2">

    <TextView
        android:id="@+id/txtViewHola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/hola"
        android:textColor="@color/verde"
        android:textSize="100sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/usuario"
        android:textColor="@color/verde"
        android:textSize="100sp"
        app:layout_constraintStart_toEndOf="@+id/txtViewHola"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewSelecciona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/selecciona_juego"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewHola" />

    <TextView
        android:id="@+id/textViewNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="2"
        android:fontFamily="@font/lilita_one"
        android:textColor="@color/verde"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/layoutJuegos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewSelecciona">

        <ImageButton
            android:id="@+id/btnJuego1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/transparente"
            android:src="@drawable/boton_placeholder" />

        <ImageButton
            android:id="@+id/btnJuego2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/transparente"
            android:src="@drawable/boton_placeholder" />



        <TextView
            android:id="@+id/txtViewJuego1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lilita_one"
            android:text="@string/juego_1"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txtViewJuego2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lilita_one"
            android:text="@string/juego_2"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <ImageButton
            android:id="@+id/btnJuego3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/transparente"
            android:src="@drawable/boton_placeholder" />

        <ImageButton
            android:id="@+id/btnJuego4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@color/transparente"
            android:src="@drawable/boton_placeholder" />

        <TextView
            android:id="@+id/txtViewJuego3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lilita_one"
            android:text="@string/juego_3"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txtViewJuego4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lilita_one"
            android:text="@string/juego_4"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </GridLayout>

    <ImageButton
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/transparente"
        android:scaleType="fitCenter"
        android:src="@drawable/flecha_atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>