<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosRegistradosFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_datosregistrados" />

    <ImageButton
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/transparente"
        android:scaleType="fitCenter"
        android:src="@drawable/flecha_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/datos_de_alumno"
        android:textColor="@color/azul_datos"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDatos"
        app:layout_constraintBottom_toTopOf="@id/btnSiguiente"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewNombreRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one"
                    android:textColor="@color/azul_datos"
                    android:textSize="50sp"
                    android:text="@string/nombre_registro" />

                <TextView
                    android:id="@+id/txtViewNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/lilita_one"
                    android:textColor="@color/gris_oscuro"
                    android:textSize="50sp"
                    android:text="@string/dato" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewApellidosRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one"
                    android:textColor="@color/azul_datos"
                    android:textSize="50sp"
                    android:text="@string/apellidos_registro" />

                <TextView
                    android:id="@+id/txtViewApellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/lilita_one"
                    android:textColor="@color/gris_oscuro"
                    android:textSize="50sp"
                    android:text="@string/dato" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewNivelRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one"
                    android:textColor="@color/azul_datos"
                    android:textSize="50sp"
                    android:text="@string/nivel_registro"/>

                <TextView
                    android:id="@+id/txtViewNivel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/lilita_one"
                    android:textColor="@color/gris_oscuro"
                    android:textSize="50sp"
                    android:text="@string/dato" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtViewCorreoRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one"
                    android:text="@string/correo_registro"
                    android:textColor="@color/azul_datos"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/txtViewCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/lilita_one"
                    android:textColor="@color/gris_oscuro"
                    android:textSize="50sp"
                    android:text="@string/dato" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:background="@color/transparente"
        android:scaleType="fitCenter"
        android:src="@drawable/boton_siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>