<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditaDatosAlumnoFragment">

    <ImageButton
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:background="@color/transparente"
        android:scaleType="fitCenter"
        android:src="@drawable/flecha_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/datos_de_alumno"
        android:textColor="@color/verde"
        android:textSize="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnSiguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewDatos">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lilita_one"
                android:text="@string/nombre"
                android:textColor="@color/verde"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_redondo"
                android:fontFamily="@font/lilita_one"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/txtViewApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lilita_one"
                android:text="@string/apellidos"
                android:textColor="@color/verde"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editTextApellidos"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_redondo"
                android:fontFamily="@font/lilita_one"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/txtViewFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lilita_one"
                android:text="@string/fecha_nacimiento"
                android:textColor="@color/verde"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editTextFecha"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_redondo"
                android:drawableRight="@drawable/icono_fecha_verde"
                android:paddingEnd="20dp"
                android:fontFamily="@font/lilita_one"
                android:paddingLeft="20dp"
                android:textSize="40sp"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewNivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lilita_one"
                android:text="@string/nivel"
                android:textColor="@color/verde"
                android:textSize="40sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/dropDownNivel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_redondo"
                    android:paddingLeft="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgViewFlecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/flecha_dropdown_verde"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="@+id/dropDownNivel"
                    app:layout_constraintTop_toTopOf="@+id/dropDownNivel"
                    app:layout_constraintBottom_toBottomOf="@+id/dropDownNivel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <ImageButton
                    android:id="@+id/btnFolder"
                    android:layout_width="400dp"
                    android:layout_height="220dp"
                    android:layout_marginTop="50dp"
                    android:background="@color/transparente"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icono_folder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></ImageButton>

                <TextView
                    android:id="@+id/txtViewFolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/lilita_one"
                    android:text="@string/imagenes"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:background="@color/transparente"
        android:scaleType="fitCenter"
        android:src="@drawable/boton_siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>